add published paper

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 									<p>
 										I received my M.S. degree with Distinction in School of Electrical & Electronic Engineering, University of Manchester, UK in 2012.  I'm currently pursuing my Ph.D. degree in School of Engineering and Information Technologies, University of Sydney, Australia. 
 										My reseach interests lie on applying machine learning techniques, such as deep learning, transfer learning, and optimisation methods to predict and solve in telecommunication scenarios.
+										I was a recipient of the Research Training Program Stipend and the Norman I. Price Scholarship from the Center of Excellence in Telecommunications, School of Electrical and Information Engineering, The University of Sydney.
 									</p>
 								</article>
 								<article>
@@ -87,7 +88,7 @@
 										Considering that real networks are not static, the MME further updates the DNN according to the variation of real networks.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Read</a></li>
+										<li><a href="#" class="button">To be published available soon</a></li>
 									</ul>
 								</article>
 								
@@ -105,7 +106,7 @@
 										and two mapping algorithms are proposed to achieve different performance-complexity trade-offs.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Read</a></li>
+										<li><a href="https://www.dropbox.com/s/e87tiquxjvvztmz/FINAL%20VERSION.pdf?dl=0" class="button">Full Read</a></li>
 									</ul>
 								</article>
 								
