--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-
+<!--
+	Massively by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Rui Dong</title>
@@ -48,7 +52,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/uni.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://www.dropbox.com/s/9lprz606poh61j2/CV_Rui%20DONG_2.pdf?dl=0" class="button large">Full Story</a></li>
+									<li><a href="https://www.dropbox.com/s/fbsxpj7p1vlr6jj/CV_Rui%20DONG.pdf?dl=0" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
@@ -79,12 +83,13 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/neural1.jpg" alt="" /></a>
 									<p>
-										We propose a deep learning (DL) architecture, where a digital twin of the real network environment is used to train the DL algorithm off-line at a central server. 
+										<span>&#8226;</span> Published in IEEE Transactions on Wireless Communications.<br>
+										<span>&#8226;</span> We propose a deep learning (DL) architecture, where a digital twin of the real network environment is used to train the DL algorithm off-line at a central server. 
 										From the pre-trained deep neural network (DNN), the mobility management entity (MME) can obtain user association scheme in a real-time manner. 
 										Considering that real networks are not static, the MME further updates the DNN according to the variation of real networks.
 									</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">To be published available soon</a></li>
+										<li><a href="https://www.dropbox.com/s/gw81vdragvcstmc/arxiv_version.pdf?dl=0" class="button">Full Read</a></li>
 									</ul>
 								</article>
 								
@@ -95,7 +100,8 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/bp.jpg" alt="" /></a>
 									<p>
-										We propose to maximize the network capacity by jointly optimizing the beamforming vectors and a binary vector that represents the user association decisions. 
+										<span>&#8226;</span> Published in IEEE Transactions on Vehicular Technology.<br>
+										<span>&#8226;</span> We propose to maximize the network capacity by jointly optimizing the beamforming vectors and a binary vector that represents the user association decisions. 
 										A three-step Gaussian belief propagation (GaBP) based distributed solver is proposed to solve the non-convex NP-hard problem considered in this paper. 
 										By relaxing the binary optimisation variables, we first transform the optimization problem into a linear programming. 
 										Subsequently, GaBP is used to efficiently obtain a feasible solution in parallel, 
@@ -116,7 +122,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(+61) 426764950</a></p>
+								<p><a href="#">(+61) 415764950</a></p>
 							</section>
 							<section>
 								<h3>Email</h3>
